--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -711,8 +711,7 @@ BP_Fruit_C.TransformCommon=True
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Final/Blueprint/BP_Fruit.BP_Fruit
-OpenAssetsAtExit=/Game/Final/Blueprint/BP_Maincharacter.BP_Maincharacter
+SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
