--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -708,10 +708,16 @@ BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
 BP_Fruit_C.TransformCommon=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Final/Blueprint/BP_Maincharacter.BP_Maincharacter
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
