Fixed Jumping/Wall Jump

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -713,11 +713,176 @@ IntProperty.DefaultValueCategory=True
 K2Node_CustomEvent.GraphNodeDetail=True
 K2Node_CustomEvent.Graph=True
 K2Node_CustomEvent.Inputs=True
+BP_FlyingEnemy_C.Tick=True
+BP_FlyingEnemy_C.Character=True
+BP_FlyingEnemy_C.Camera=True
+BP_FlyingEnemy_C.Pawn=True
+BP_FlyingEnemy_C.Rendering=True
+BP_FlyingEnemy_C.Replication=True
+BP_FlyingEnemy_C.Input=True
+BP_FlyingEnemy_C.Actor=True
+BP_Flying_Enemy_C.Default=True
+BP_Flying_Enemy_C.Tick=True
+BP_Flying_Enemy_C.Character=True
+BP_Flying_Enemy_C.Camera=True
+BP_Flying_Enemy_C.Pawn=True
+BP_Flying_Enemy_C.Rendering=True
+BP_Flying_Enemy_C.Replication=True
+BP_Flying_Enemy_C.Input=True
+BP_Flying_Enemy_C.Actor=True
+StructProperty.Variable=True
+StructProperty.DefaultValueCategory=True
+BP_Enemy_Bullet_C.Tick=True
+BP_Enemy_Bullet_C.Rendering=True
+BP_Enemy_Bullet_C.Replication=True
+BP_Enemy_Bullet_C.Input=True
+BP_Enemy_Bullet_C.Actor=True
+BP_Flying_Enemy_C.Variable=True
+BP_Flying_Enemy_C.TransformCommon=True
+BP_Flying_Enemy_C.Sockets=True
+BP_Flying_Enemy_C.Sprite=True
+BP_Flying_Enemy_C.Materials=True
+BP_Flying_Enemy_C.Physics=True
+BP_Flying_Enemy_C.Collision=True
+BP_Flying_Enemy_C.Lighting=True
+BP_Flying_Enemy_C.Tags=True
+BP_Flying_Enemy_C.ComponentReplication=True
+BP_Flying_Enemy_C.Activation=True
+BP_Flying_Enemy_C.Cooking=True
+BP_Flying_Enemy_C.Events=True
+REINST_BP_Flying_Enemy_C_155.Variable=True
+REINST_BP_Flying_Enemy_C_155.TransformCommon=True
+REINST_BP_Flying_Enemy_C_155.Sockets=True
+REINST_BP_Flying_Enemy_C_155.Sprite=True
+REINST_BP_Flying_Enemy_C_155.Materials=True
+REINST_BP_Flying_Enemy_C_155.Physics=True
+REINST_BP_Flying_Enemy_C_155.Collision=True
+REINST_BP_Flying_Enemy_C_155.Lighting=True
+REINST_BP_Flying_Enemy_C_155.Rendering=True
+REINST_BP_Flying_Enemy_C_155.Tags=True
+REINST_BP_Flying_Enemy_C_155.ComponentReplication=True
+REINST_BP_Flying_Enemy_C_155.Activation=True
+REINST_BP_Flying_Enemy_C_155.Cooking=True
+REINST_BP_Flying_Enemy_C_155.Events=True
+BP_Flying_Enemy_C.Character Movement: Jumping / Falling=True
+BP_Flying_Enemy_C.Character Movement (General Settings)=True
+BP_Flying_Enemy_C.Character Movement: Walking=True
+BP_Flying_Enemy_C.Character Movement: Swimming=True
+BP_Flying_Enemy_C.Character Movement: Flying=True
+BP_Flying_Enemy_C.Character Movement: Custom Movement=True
+BP_Flying_Enemy_C.Character Movement (Rotation Settings)=True
+BP_Flying_Enemy_C.Character Movement (Networking)=True
+BP_Flying_Enemy_C.Character Movement: Physics Interaction=True
+BP_Flying_Enemy_C.Character Movement=True
+BP_Flying_Enemy_C.Character Movement: Avoidance=True
+BP_Flying_Enemy_C.Character Movement: NavMesh Movement=True
+BP_Flying_Enemy_C.RootMotion=True
+BP_Flying_Enemy_C.NavMovement=True
+BP_Flying_Enemy_C.Velocity=True
+BP_Flying_Enemy_C.PlanarMovement=True
+BP_Flying_Enemy_C.MovementComponent=True
+BP_Flying_Enemy_C.Shape=True
+BP_Flying_Enemy_C.Navigation=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Color Grading=True
+CameraComponent.Film=True
+CameraComponent.Mobile Tonemapper=True
+CameraComponent.Lens=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+REINST_BP_Flying_Enemy_C_203.TransformCommon=True
+REINST_BP_Flying_Enemy_C_203.Sprite=True
+REINST_BP_Flying_Enemy_C_203.Physics=True
+REINST_BP_Flying_Enemy_C_203.Collision=True
+REINST_BP_Flying_Enemy_C_203.Lighting=True
+REINST_BP_Flying_Enemy_C_203.Rendering=True
+REINST_BP_Flying_Enemy_C_203.Tags=True
+REINST_BP_Flying_Enemy_C_203.Activation=True
+REINST_BP_Flying_Enemy_C_203.Cooking=True
+REINST_BP_Flying_Enemy_C_203.Character=True
+REINST_BP_Flying_Enemy_C_203.Character Movement: Jumping / Falling=True
+REINST_BP_Flying_Enemy_C_203.Character Movement (General Settings)=True
+REINST_BP_Flying_Enemy_C_203.Character Movement: Walking=True
+REINST_BP_Flying_Enemy_C_203.Character Movement: Swimming=True
+REINST_BP_Flying_Enemy_C_203.Character Movement: Flying=True
+REINST_BP_Flying_Enemy_C_203.Character Movement: Custom Movement=True
+REINST_BP_Flying_Enemy_C_203.Character Movement (Rotation Settings)=True
+REINST_BP_Flying_Enemy_C_203.Character Movement: Physics Interaction=True
+REINST_BP_Flying_Enemy_C_203.Character Movement (Networking)=True
+REINST_BP_Flying_Enemy_C_203.Character Movement=True
+REINST_BP_Flying_Enemy_C_203.Character Movement: Avoidance=True
+REINST_BP_Flying_Enemy_C_203.Character Movement: NavMesh Movement=True
+REINST_BP_Flying_Enemy_C_203.RootMotion=True
+REINST_BP_Flying_Enemy_C_203.NavMovement=True
+REINST_BP_Flying_Enemy_C_203.Velocity=True
+REINST_BP_Flying_Enemy_C_203.PlanarMovement=True
+REINST_BP_Flying_Enemy_C_203.MovementComponent=True
+REINST_BP_Flying_Enemy_C_203.Shape=True
+REINST_BP_Flying_Enemy_C_203.Navigation=True
+REINST_BP_Flying_Enemy_C_203.Camera=True
+REINST_BP_Flying_Enemy_C_203.Pawn=True
+REINST_BP_Flying_Enemy_C_203.Input=True
+REINST_BP_Flying_Enemy_C_203.Actor=True
+REINST_BP_Flying_Enemy_C_217.TransformCommon=True
+REINST_BP_Flying_Enemy_C_217.Sprite=True
+REINST_BP_Flying_Enemy_C_217.Physics=True
+REINST_BP_Flying_Enemy_C_217.Collision=True
+REINST_BP_Flying_Enemy_C_217.Lighting=True
+REINST_BP_Flying_Enemy_C_217.Rendering=True
+REINST_BP_Flying_Enemy_C_217.Tags=True
+REINST_BP_Flying_Enemy_C_217.Activation=True
+REINST_BP_Flying_Enemy_C_217.Cooking=True
+REINST_BP_Flying_Enemy_C_217.Character=True
+REINST_BP_Flying_Enemy_C_217.Character Movement: Jumping / Falling=True
+REINST_BP_Flying_Enemy_C_217.Character Movement (General Settings)=True
+REINST_BP_Flying_Enemy_C_217.Character Movement: Walking=True
+REINST_BP_Flying_Enemy_C_217.Character Movement: Swimming=True
+REINST_BP_Flying_Enemy_C_217.Character Movement: Flying=True
+REINST_BP_Flying_Enemy_C_217.Character Movement: Custom Movement=True
+REINST_BP_Flying_Enemy_C_217.Character Movement (Rotation Settings)=True
+REINST_BP_Flying_Enemy_C_217.Character Movement: Physics Interaction=True
+REINST_BP_Flying_Enemy_C_217.Character Movement (Networking)=True
+REINST_BP_Flying_Enemy_C_217.Character Movement=True
+REINST_BP_Flying_Enemy_C_217.Character Movement: Avoidance=True
+REINST_BP_Flying_Enemy_C_217.Character Movement: NavMesh Movement=True
+REINST_BP_Flying_Enemy_C_217.RootMotion=True
+REINST_BP_Flying_Enemy_C_217.NavMovement=True
+REINST_BP_Flying_Enemy_C_217.Velocity=True
+REINST_BP_Flying_Enemy_C_217.PlanarMovement=True
+REINST_BP_Flying_Enemy_C_217.MovementComponent=True
+REINST_BP_Flying_Enemy_C_217.Shape=True
+REINST_BP_Flying_Enemy_C_217.Navigation=True
+REINST_BP_Flying_Enemy_C_217.Camera=True
+REINST_BP_Flying_Enemy_C_217.Pawn=True
+REINST_BP_Flying_Enemy_C_217.Input=True
+REINST_BP_Flying_Enemy_C_217.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Final/Blueprint/BP_Maincharacter.BP_Maincharacter
+OpenAssetsAtExit=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1440,15 +1605,20 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ac
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem1=/Game/Final/Blueprint/BP_Fruit
-MRUItem2=/Game/Final/Blueprint/BP_Bullet
-MRUItem3=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem4=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem5=/Game/Final/Sprites/FB_Jumping
-MRUItem6=/Game/Final/Sprites/FB_Idle
-MRUItem7=/Game/Final/Blueprint/Maincharacter
-MRUItem8=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem9=/Game/SF_ExpMedical_Fac/Maps/Facility
+MRUItem1=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem2=/Game/Final/Enumerations/Boss
+MRUItem3=/Game/Final/Enumerations/FlyingEnemy
+MRUItem4=/Game/Final/Blueprint/BP_Enemy_Bullet
+MRUItem5=/Game/Final/Blueprint/BP_FlyingEnemy
+MRUItem6=/Game/Final/Blueprint/BP_Fruit
+MRUItem7=/Game/Final/Blueprint/BP_Bullet
+MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem10=/Game/Final/Sprites/FB_Jumping
+MRUItem11=/Game/Final/Sprites/FB_Idle
+MRUItem12=/Game/Final/Blueprint/Maincharacter
+MRUItem13=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem14=/Game/SF_ExpMedical_Fac/Maps/Facility
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -1459,6 +1629,10 @@ MRUItem9=/Game/SF_ExpMedical_Fac/Maps/Facility
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode=1
 /Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap.2DSideScrollerExampleMap:PersistentLevel.2DSideScrollerExampleMap=1
 /Game/Final/Blueprint/BP_Bullet.BP_Bullet=1
+/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy=1
+/Game/Final/Projectiles/BP_Enemy_Bullet.BP_Enemy_Bullet=1
+/Game/Final/Enumerations/FlyingEnemy.FlyingEnemy=1
+/Game/Final/Enumerations/Boss.Boss=1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[6]\" "
@@ -1471,11 +1645,15 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Fruit.BP_Fruit;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 
 [SelectionDetails]
 PreserveScaleRatio=True
+
+[SuppressableDialogs]
+ChangeVariableType_Warning=True
 
 
