--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -877,12 +877,90 @@ REINST_BP_Flying_Enemy_C_217.Camera=True
 REINST_BP_Flying_Enemy_C_217.Pawn=True
 REINST_BP_Flying_Enemy_C_217.Input=True
 REINST_BP_Flying_Enemy_C_217.Actor=True
+REINST_BP_Flying_Enemy_C_39.None=True
+REINST_BP_Flying_Enemy_C_39.Tick=True
+REINST_BP_Flying_Enemy_C_39.Character=True
+REINST_BP_Flying_Enemy_C_39.Camera=True
+REINST_BP_Flying_Enemy_C_39.Pawn=True
+REINST_BP_Flying_Enemy_C_39.Rendering=True
+REINST_BP_Flying_Enemy_C_39.Replication=True
+REINST_BP_Flying_Enemy_C_39.Input=True
+REINST_BP_Flying_Enemy_C_39.Actor=True
+REINST_BP_Flying_Enemy_C_43.None=True
+REINST_BP_Flying_Enemy_C_43.Tick=True
+REINST_BP_Flying_Enemy_C_43.Character=True
+REINST_BP_Flying_Enemy_C_43.Camera=True
+REINST_BP_Flying_Enemy_C_43.Pawn=True
+REINST_BP_Flying_Enemy_C_43.Rendering=True
+REINST_BP_Flying_Enemy_C_43.Replication=True
+REINST_BP_Flying_Enemy_C_43.Input=True
+REINST_BP_Flying_Enemy_C_43.Actor=True
+REINST_BP_Flying_Enemy_C_47.None=True
+REINST_BP_Flying_Enemy_C_47.Tick=True
+REINST_BP_Flying_Enemy_C_47.Character=True
+REINST_BP_Flying_Enemy_C_47.Camera=True
+REINST_BP_Flying_Enemy_C_47.Pawn=True
+REINST_BP_Flying_Enemy_C_47.Rendering=True
+REINST_BP_Flying_Enemy_C_47.Replication=True
+REINST_BP_Flying_Enemy_C_47.Input=True
+REINST_BP_Flying_Enemy_C_47.Actor=True
+BP_Following_Boss_C.Default=True
+BP_Following_Boss_C.Tick=True
+BP_Following_Boss_C.Character=True
+BP_Following_Boss_C.Camera=True
+BP_Following_Boss_C.Pawn=True
+BP_Following_Boss_C.Rendering=True
+BP_Following_Boss_C.Replication=True
+BP_Following_Boss_C.Input=True
+BP_Following_Boss_C.Actor=True
+BP_Following_Boss_C.Variable=True
+BP_Following_Boss_C.TransformCommon=True
+BP_Following_Boss_C.Sockets=True
+BP_Following_Boss_C.Sprite=True
+BP_Following_Boss_C.Materials=True
+BP_Following_Boss_C.Physics=True
+BP_Following_Boss_C.Collision=True
+BP_Following_Boss_C.Lighting=True
+BP_Following_Boss_C.Tags=True
+BP_Following_Boss_C.ComponentReplication=True
+BP_Following_Boss_C.Activation=True
+BP_Following_Boss_C.Cooking=True
+BP_Following_Boss_C.Events=True
+BP_Following_Boss_C.Shape=True
+BP_Following_Boss_C.Navigation=True
+REINST_BP_Following_Boss_C_59.Variable=True
+REINST_BP_Following_Boss_C_59.TransformCommon=True
+REINST_BP_Following_Boss_C_59.Sockets=True
+REINST_BP_Following_Boss_C_59.Shape=True
+REINST_BP_Following_Boss_C_59.Navigation=True
+REINST_BP_Following_Boss_C_59.Rendering=True
+REINST_BP_Following_Boss_C_59.Physics=True
+REINST_BP_Following_Boss_C_59.Collision=True
+REINST_BP_Following_Boss_C_59.Tags=True
+REINST_BP_Following_Boss_C_59.ComponentReplication=True
+REINST_BP_Following_Boss_C_59.Cooking=True
+REINST_BP_Following_Boss_C_59.Events=True
+BP_Following_Boss_C.Character Movement: Jumping / Falling=True
+BP_Following_Boss_C.Character Movement (General Settings)=True
+BP_Following_Boss_C.Character Movement: Walking=True
+BP_Following_Boss_C.Character Movement: Swimming=True
+BP_Following_Boss_C.Character Movement: Flying=True
+BP_Following_Boss_C.Character Movement: Custom Movement=True
+BP_Following_Boss_C.Character Movement (Rotation Settings)=True
+BP_Following_Boss_C.Character Movement: Physics Interaction=True
+BP_Following_Boss_C.Character Movement (Networking)=True
+BP_Following_Boss_C.Character Movement=True
+BP_Following_Boss_C.Character Movement: Avoidance=True
+BP_Following_Boss_C.Character Movement: NavMesh Movement=True
+BP_Following_Boss_C.RootMotion=True
+BP_Following_Boss_C.NavMovement=True
+BP_Following_Boss_C.Velocity=True
+BP_Following_Boss_C.PlanarMovement=True
+BP_Following_Boss_C.MovementComponent=True
 
 [AssetEditorManager]
 CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Final/Blueprint/BP_Maincharacter.BP_Maincharacter
-OpenAssetsAtExit=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -903,11 +981,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/2DSideScrollerBP/Maps
+UNR=../../../../../../Users/l_war/OneDrive/Documents/Github/Project-Final/Finals/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBX=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBXAnim=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
-GenericImport=../../../../../../Users/l_war/OneDrive/Documents/fruit.png
+GenericImport=../../../../../../Users/l_war/OneDrive/Documents/Github/Project-Final/Finals/flying_bullet.png
 GenericExport=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericOpen=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericSave=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
@@ -1604,21 +1682,22 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem0=/Game/Final/Blueprint/BP_Following_Boss
 MRUItem1=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem2=/Game/Final/Enumerations/Boss
-MRUItem3=/Game/Final/Enumerations/FlyingEnemy
-MRUItem4=/Game/Final/Blueprint/BP_Enemy_Bullet
-MRUItem5=/Game/Final/Blueprint/BP_FlyingEnemy
-MRUItem6=/Game/Final/Blueprint/BP_Fruit
-MRUItem7=/Game/Final/Blueprint/BP_Bullet
-MRUItem8=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem10=/Game/Final/Sprites/FB_Jumping
-MRUItem11=/Game/Final/Sprites/FB_Idle
-MRUItem12=/Game/Final/Blueprint/Maincharacter
-MRUItem13=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem14=/Game/SF_ExpMedical_Fac/Maps/Facility
+MRUItem2=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem3=/Game/Final/Enumerations/Boss
+MRUItem4=/Game/Final/Enumerations/FlyingEnemy
+MRUItem5=/Game/Final/Blueprint/BP_Enemy_Bullet
+MRUItem6=/Game/Final/Blueprint/BP_FlyingEnemy
+MRUItem7=/Game/Final/Blueprint/BP_Fruit
+MRUItem8=/Game/Final/Blueprint/BP_Bullet
+MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem11=/Game/Final/Sprites/FB_Jumping
+MRUItem12=/Game/Final/Sprites/FB_Idle
+MRUItem13=/Game/Final/Blueprint/Maincharacter
+MRUItem14=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem15=/Game/SF_ExpMedical_Fac/Maps/Facility
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -1633,6 +1712,7 @@ MRUItem14=/Game/SF_ExpMedical_Fac/Maps/Facility
 /Game/Final/Projectiles/BP_Enemy_Bullet.BP_Enemy_Bullet=1
 /Game/Final/Enumerations/FlyingEnemy.FlyingEnemy=1
 /Game/Final/Enumerations/Boss.Boss=1
+/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss=1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[6]\" "
@@ -1645,6 +1725,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Flying_Enemy.BP_Flying_Enemy;
 RecentlyPlaced=/Game/Final/Blueprint/BP_Fruit.BP_Fruit;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
