--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -957,9 +957,66 @@ BP_Following_Boss_C.NavMovement=True
 BP_Following_Boss_C.Velocity=True
 BP_Following_Boss_C.PlanarMovement=True
 BP_Following_Boss_C.MovementComponent=True
+REINST_BP_Following_Boss_C_111.Variable=True
+REINST_BP_Following_Boss_C_111.Sockets=True
+REINST_BP_Following_Boss_C_111.Character Movement: Jumping / Falling=True
+REINST_BP_Following_Boss_C_111.Character Movement (General Settings)=True
+REINST_BP_Following_Boss_C_111.Character Movement: Walking=True
+REINST_BP_Following_Boss_C_111.Character Movement: Swimming=True
+REINST_BP_Following_Boss_C_111.Character Movement: Flying=True
+REINST_BP_Following_Boss_C_111.Character Movement: Custom Movement=True
+REINST_BP_Following_Boss_C_111.Character Movement (Rotation Settings)=True
+REINST_BP_Following_Boss_C_111.Character Movement (Networking)=True
+REINST_BP_Following_Boss_C_111.Character Movement: Physics Interaction=True
+REINST_BP_Following_Boss_C_111.Character Movement=True
+REINST_BP_Following_Boss_C_111.Character Movement: Avoidance=True
+REINST_BP_Following_Boss_C_111.Character Movement: NavMesh Movement=True
+REINST_BP_Following_Boss_C_111.RootMotion=True
+REINST_BP_Following_Boss_C_111.NavMovement=True
+REINST_BP_Following_Boss_C_111.Velocity=True
+REINST_BP_Following_Boss_C_111.PlanarMovement=True
+REINST_BP_Following_Boss_C_111.MovementComponent=True
+REINST_BP_Following_Boss_C_111.Tags=True
+REINST_BP_Following_Boss_C_111.ComponentReplication=True
+REINST_BP_Following_Boss_C_111.Activation=True
+REINST_BP_Following_Boss_C_111.Cooking=True
+REINST_BP_Following_Boss_C_111.Events=True
+BP_Boss_C.Default=True
+BP_Boss_C.Tick=True
+BP_Boss_C.Character=True
+BP_Boss_C.Camera=True
+BP_Boss_C.Pawn=True
+BP_Boss_C.Rendering=True
+BP_Boss_C.Replication=True
+BP_Boss_C.Input=True
+BP_Boss_C.Actor=True
+REINST_BP_Following_Boss_C_135.Variable=True
+REINST_BP_Following_Boss_C_135.Sockets=True
+REINST_BP_Following_Boss_C_135.Character Movement: Jumping / Falling=True
+REINST_BP_Following_Boss_C_135.Character Movement (General Settings)=True
+REINST_BP_Following_Boss_C_135.Character Movement: Walking=True
+REINST_BP_Following_Boss_C_135.Character Movement: Swimming=True
+REINST_BP_Following_Boss_C_135.Character Movement: Flying=True
+REINST_BP_Following_Boss_C_135.Character Movement: Custom Movement=True
+REINST_BP_Following_Boss_C_135.Character Movement (Rotation Settings)=True
+REINST_BP_Following_Boss_C_135.Character Movement (Networking)=True
+REINST_BP_Following_Boss_C_135.Character Movement: Physics Interaction=True
+REINST_BP_Following_Boss_C_135.Character Movement=True
+REINST_BP_Following_Boss_C_135.Character Movement: Avoidance=True
+REINST_BP_Following_Boss_C_135.Character Movement: NavMesh Movement=True
+REINST_BP_Following_Boss_C_135.RootMotion=True
+REINST_BP_Following_Boss_C_135.NavMovement=True
+REINST_BP_Following_Boss_C_135.Velocity=True
+REINST_BP_Following_Boss_C_135.PlanarMovement=True
+REINST_BP_Following_Boss_C_135.MovementComponent=True
+REINST_BP_Following_Boss_C_135.Tags=True
+REINST_BP_Following_Boss_C_135.ComponentReplication=True
+REINST_BP_Following_Boss_C_135.Activation=True
+REINST_BP_Following_Boss_C_135.Cooking=True
+REINST_BP_Following_Boss_C_135.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -981,7 +1038,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/l_war/OneDrive/Documents/Github/Project-Final/Finals/Content/2DSideScrollerBP/Maps
+UNR=A:/Github/Project-Final/Finals/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBX=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBXAnim=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
@@ -1682,22 +1739,23 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem1=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem2=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem3=/Game/Final/Enumerations/Boss
-MRUItem4=/Game/Final/Enumerations/FlyingEnemy
-MRUItem5=/Game/Final/Blueprint/BP_Enemy_Bullet
-MRUItem6=/Game/Final/Blueprint/BP_FlyingEnemy
-MRUItem7=/Game/Final/Blueprint/BP_Fruit
-MRUItem8=/Game/Final/Blueprint/BP_Bullet
-MRUItem9=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem11=/Game/Final/Sprites/FB_Jumping
-MRUItem12=/Game/Final/Sprites/FB_Idle
-MRUItem13=/Game/Final/Blueprint/Maincharacter
-MRUItem14=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem15=/Game/SF_ExpMedical_Fac/Maps/Facility
+MRUItem0=/Game/Final/Enumerations/Boss
+MRUItem1=/Game/Final/Blueprint/BP_Boss
+MRUItem2=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem3=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem4=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem5=/Game/Final/Enumerations/FlyingEnemy
+MRUItem6=/Game/Final/Blueprint/BP_Enemy_Bullet
+MRUItem7=/Game/Final/Blueprint/BP_FlyingEnemy
+MRUItem8=/Game/Final/Blueprint/BP_Fruit
+MRUItem9=/Game/Final/Blueprint/BP_Bullet
+MRUItem10=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem12=/Game/Final/Sprites/FB_Jumping
+MRUItem13=/Game/Final/Sprites/FB_Idle
+MRUItem14=/Game/Final/Blueprint/Maincharacter
+MRUItem15=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem16=/Game/SF_ExpMedical_Fac/Maps/Facility
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -1713,6 +1771,7 @@ MRUItem15=/Game/SF_ExpMedical_Fac/Maps/Facility
 /Game/Final/Enumerations/FlyingEnemy.FlyingEnemy=1
 /Game/Final/Enumerations/Boss.Boss=1
 /Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss=1
+/Game/Final/Blueprint/BP_Boss.BP_Boss=1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[6]\" "
@@ -1736,5 +1795,6 @@ PreserveScaleRatio=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=True
+DeleteVariableInUse_Warning=False
 
 
