Added tree tileset

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1014,9 +1014,10 @@ REINST_BP_Following_Boss_C_135.ComponentReplication=True
 REINST_BP_Following_Boss_C_135.Activation=True
 REINST_BP_Following_Boss_C_135.Cooking=True
 REINST_BP_Following_Boss_C_135.Events=True
+PaperTileSet.TileSet=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -1739,23 +1740,24 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Enumerations/Boss
-MRUItem1=/Game/Final/Blueprint/BP_Boss
-MRUItem2=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem3=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem4=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem5=/Game/Final/Enumerations/FlyingEnemy
-MRUItem6=/Game/Final/Blueprint/BP_Enemy_Bullet
-MRUItem7=/Game/Final/Blueprint/BP_FlyingEnemy
-MRUItem8=/Game/Final/Blueprint/BP_Fruit
-MRUItem9=/Game/Final/Blueprint/BP_Bullet
-MRUItem10=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem12=/Game/Final/Sprites/FB_Jumping
-MRUItem13=/Game/Final/Sprites/FB_Idle
-MRUItem14=/Game/Final/Blueprint/Maincharacter
-MRUItem15=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem16=/Game/SF_ExpMedical_Fac/Maps/Facility
+MRUItem0=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
+MRUItem1=/Game/Final/Enumerations/Boss
+MRUItem2=/Game/Final/Blueprint/BP_Boss
+MRUItem3=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem4=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem5=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem6=/Game/Final/Enumerations/FlyingEnemy
+MRUItem7=/Game/Final/Blueprint/BP_Enemy_Bullet
+MRUItem8=/Game/Final/Blueprint/BP_FlyingEnemy
+MRUItem9=/Game/Final/Blueprint/BP_Fruit
+MRUItem10=/Game/Final/Blueprint/BP_Bullet
+MRUItem11=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem13=/Game/Final/Sprites/FB_Jumping
+MRUItem14=/Game/Final/Sprites/FB_Idle
+MRUItem15=/Game/Final/Blueprint/Maincharacter
+MRUItem16=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem17=/Game/SF_ExpMedical_Fac/Maps/Facility
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -1772,6 +1774,7 @@ MRUItem16=/Game/SF_ExpMedical_Fac/Maps/Facility
 /Game/Final/Enumerations/Boss.Boss=1
 /Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss=1
 /Game/Final/Blueprint/BP_Boss.BP_Boss=1
+/Game/Final/Tilesets/SpriteSheet_Trees_TileSet.SpriteSheet_Trees_TileSet=1
 
 [DetailPropertyExpansion]
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[6]\" "
