--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1015,6 +1015,15 @@ REINST_BP_Following_Boss_C_135.Activation=True
 REINST_BP_Following_Boss_C_135.Cooking=True
 REINST_BP_Following_Boss_C_135.Events=True
 PaperTileSet.TileSet=True
+REINST_BP_Maincharacter_C_47.None=True
+REINST_BP_Maincharacter_C_47.Tick=True
+REINST_BP_Maincharacter_C_47.Character=True
+REINST_BP_Maincharacter_C_47.Camera=True
+REINST_BP_Maincharacter_C_47.Pawn=True
+REINST_BP_Maincharacter_C_47.Rendering=True
+REINST_BP_Maincharacter_C_47.Replication=True
+REINST_BP_Maincharacter_C_47.Input=True
+REINST_BP_Maincharacter_C_47.Actor=True
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -1740,12 +1749,12 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
-MRUItem1=/Game/Final/Enumerations/Boss
-MRUItem2=/Game/Final/Blueprint/BP_Boss
-MRUItem3=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem4=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem5=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem1=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
+MRUItem2=/Game/Final/Enumerations/Boss
+MRUItem3=/Game/Final/Blueprint/BP_Boss
+MRUItem4=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem5=/Game/Final/Blueprint/BP_Flying_Enemy
 MRUItem6=/Game/Final/Enumerations/FlyingEnemy
 MRUItem7=/Game/Final/Blueprint/BP_Enemy_Bullet
 MRUItem8=/Game/Final/Blueprint/BP_FlyingEnemy
