--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1066,9 +1066,36 @@ REINST_BP_Maincharacter_C_87.ComponentReplication=True
 REINST_BP_Maincharacter_C_87.Activation=True
 REINST_BP_Maincharacter_C_87.Cooking=True
 REINST_BP_Maincharacter_C_87.Events=True
+REINST_BP_Maincharacter_C_157.None=True
+REINST_BP_Maincharacter_C_157.Tick=True
+REINST_BP_Maincharacter_C_157.Character=True
+REINST_BP_Maincharacter_C_157.Camera=True
+REINST_BP_Maincharacter_C_157.Pawn=True
+REINST_BP_Maincharacter_C_157.Rendering=True
+REINST_BP_Maincharacter_C_157.Replication=True
+REINST_BP_Maincharacter_C_157.Input=True
+REINST_BP_Maincharacter_C_157.Actor=True
+REINST_BP_Maincharacter_C_167.None=True
+REINST_BP_Maincharacter_C_167.Tick=True
+REINST_BP_Maincharacter_C_167.Character=True
+REINST_BP_Maincharacter_C_167.Camera=True
+REINST_BP_Maincharacter_C_167.Pawn=True
+REINST_BP_Maincharacter_C_167.Rendering=True
+REINST_BP_Maincharacter_C_167.Replication=True
+REINST_BP_Maincharacter_C_167.Input=True
+REINST_BP_Maincharacter_C_167.Actor=True
+REINST_BP_Maincharacter_C_177.None=True
+REINST_BP_Maincharacter_C_177.Tick=True
+REINST_BP_Maincharacter_C_177.Character=True
+REINST_BP_Maincharacter_C_177.Camera=True
+REINST_BP_Maincharacter_C_177.Pawn=True
+REINST_BP_Maincharacter_C_177.Rendering=True
+REINST_BP_Maincharacter_C_177.Replication=True
+REINST_BP_Maincharacter_C_177.Input=True
+REINST_BP_Maincharacter_C_177.Actor=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
