Health/Boss Attacks

--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1093,10 +1093,25 @@ REINST_BP_Maincharacter_C_177.Rendering=True
 REINST_BP_Maincharacter_C_177.Replication=True
 REINST_BP_Maincharacter_C_177.Input=True
 REINST_BP_Maincharacter_C_177.Actor=True
+BP_Boss_Tentacle_C.Tick=True
+BP_Boss_Tentacle_C.Rendering=True
+BP_Boss_Tentacle_C.Replication=True
+BP_Boss_Tentacle_C.Input=True
+BP_Boss_Tentacle_C.Actor=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/Final/Blueprint/BP_Maincharacter.BP_Maincharacter
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1819,23 +1834,24 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.Ac
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
-MRUItem1=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
-MRUItem2=/Game/Final/Enumerations/Boss
-MRUItem3=/Game/Final/Blueprint/BP_Boss
-MRUItem4=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem5=/Game/Final/Blueprint/BP_Flying_Enemy
-MRUItem6=/Game/Final/Enumerations/FlyingEnemy
-MRUItem7=/Game/Final/Blueprint/BP_Enemy_Bullet
-MRUItem8=/Game/Final/Blueprint/BP_FlyingEnemy
-MRUItem9=/Game/Final/Blueprint/BP_Fruit
-MRUItem10=/Game/Final/Blueprint/BP_Bullet
-MRUItem11=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
-MRUItem12=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
-MRUItem13=/Game/Final/Sprites/FB_Jumping
-MRUItem14=/Game/Final/Sprites/FB_Idle
-MRUItem15=/Game/Final/Blueprint/Maincharacter
-MRUItem16=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
-MRUItem17=/Game/SF_ExpMedical_Fac/Maps/Facility
+MRUItem1=/Game/Final/Blueprint/BP_Boss_Tentacle
+MRUItem2=/Game/Final/Blueprint/BP_Boss
+MRUItem3=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
+MRUItem4=/Game/Final/Enumerations/Boss
+MRUItem5=/Game/Final/Blueprint/BP_Following_Boss
+MRUItem6=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem7=/Game/Final/Enumerations/FlyingEnemy
+MRUItem8=/Game/Final/Blueprint/BP_Enemy_Bullet
+MRUItem9=/Game/Final/Blueprint/BP_FlyingEnemy
+MRUItem10=/Game/Final/Blueprint/BP_Fruit
+MRUItem11=/Game/Final/Blueprint/BP_Bullet
+MRUItem12=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter
+MRUItem13=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem14=/Game/Final/Sprites/FB_Jumping
+MRUItem15=/Game/Final/Sprites/FB_Idle
+MRUItem16=/Game/Final/Blueprint/Maincharacter
+MRUItem17=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
+MRUItem18=/Game/SF_ExpMedical_Fac/Maps/Facility
 
 [AssetEditorToolkitTabLocation]
 /Game/Final/Blueprint/Maincharacter.Maincharacter=1
@@ -1853,6 +1869,7 @@ MRUItem17=/Game/SF_ExpMedical_Fac/Maps/Facility
 /Game/Final/Blueprint/BP_Following_Boss.BP_Following_Boss=1
 /Game/Final/Blueprint/BP_Boss.BP_Boss=1
 /Game/Final/Tilesets/SpriteSheet_Trees_TileSet.SpriteSheet_Trees_TileSet=1
+/Game/Final/Blueprint/BP_Boss_Tentacle.BP_Boss_Tentacle=1
 
 [DetailPropertyExpansion]
 InputSettings=
