--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1109,9 +1109,8 @@ SceneComponent.Cooking=True
 SceneComponent.Events=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Final/Blueprint/BP_Maincharacter.BP_Maincharacter
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=180.000
@@ -1136,7 +1135,7 @@ UNR=A:/Github/Project-Final/Finals/Content/2DSideScrollerBP/Maps
 BRUSH=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBX=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBXAnim=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
-GenericImport=../../../../../../Users/l_war/OneDrive/Documents/Github/Project-Final/Finals/flying_bullet.png
+GenericImport=../../../../../../Users/l_war/OneDrive/Documents/Github/project_final_2/Project-Final/Finals/boss tentacle.png
 GenericExport=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericOpen=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericSave=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
@@ -1833,13 +1832,13 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Dash,InputSettings.Bindings.ActionMappings.Shoot,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.Move Up,InputSettings.Bindings.ActionMappings.Jump,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem0=/Game/Final/Blueprint/BP_Boss
 MRUItem1=/Game/Final/Blueprint/BP_Boss_Tentacle
-MRUItem2=/Game/Final/Blueprint/BP_Boss
-MRUItem3=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
-MRUItem4=/Game/Final/Enumerations/Boss
-MRUItem5=/Game/Final/Blueprint/BP_Following_Boss
-MRUItem6=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem2=/Game/Final/Blueprint/BP_Flying_Enemy
+MRUItem3=/Game/Final/Blueprint/BP_Maincharacter
+MRUItem4=/Game/Final/Tilesets/SpriteSheet_Trees_TileSet
+MRUItem5=/Game/Final/Enumerations/Boss
+MRUItem6=/Game/Final/Blueprint/BP_Following_Boss
 MRUItem7=/Game/Final/Enumerations/FlyingEnemy
 MRUItem8=/Game/Final/Blueprint/BP_Enemy_Bullet
 MRUItem9=/Game/Final/Blueprint/BP_FlyingEnemy
