--- a/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Finals/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1080,7 +1080,7 @@ PaperTileMapComponent.Activation=True
 PaperTileMapComponent.Cooking=True
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [RootWindow]
@@ -1106,7 +1106,7 @@ UNR=C:/Users/beclo/Documents/GitHub/Project-Final/Finals/Content/2DSideScrollerB
 BRUSH=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBX=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 FBXAnim=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
-GenericImport=../../../../../../Desktop/FINAL/SpriteSheet_Trees2.png
+GenericImport=../../../../../../Desktop/FINAL/caveblock.png
 GenericExport=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericOpen=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
 GenericSave=../../../../../../Users/l_war/OneDrive/Documents/Unreal Projects/Finals/Content/
